# Kaggle-Outbrain-Click-Prediction

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml
src/: __init__.py
terraform/: .terraform.docs.yaml  main.tf  variables.tf  versions.tf
terraform/modules/emr/: main.tf  variables.tf
terraform/modules/s3/: main.tf  outputs.tf  variables.tf
terraform/modules/security/: iam.tf  outputs.tf  ssh.tf
terraform/modules/vpc/: main.tf  outputs.tf  variables.tf
